# shaerlock

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
ai_fw_audit/: analyzer.py  cli.py  demo_runner.py  enricher.py  evaluation.py  evasion.py  parser.py  schemas.py  secrets.py
ai_fw_audit/llm/: anthropic_client.py  base.py  ollama.py
demo/: README.md  capture.sh  frag_demo.py
docs/: ANOMALY_TAXONOMY.md  ARCHITECTURE.md  E2E.md  EVALUATION.md  PROJECT_DOSSIER.md  REFERENCES.md
docs/research-notes/: LLM_Integration_Research_Report.md  firewall_anomaly_detection_research.md
eval-runs/: anthropic.json  clean-control.json  no-llm.json
scripts/: e2e.sh  screenshots.py
slides/: README.md  build.js  narration.md  package-lock.json  package.json  shaerlock.pptx
tests/: test_analyzer.py  test_analyzer_forward.py  test_enricher.py  test_evaluation_offline.py  test_evasion.py  test_parser.py
tests/fixtures/: clean-ruleset.txt  flawed-forward.ANSWERS.md  flawed-forward.txt  flawed-ruleset.ANSWERS.md  flawed-ruleset.txt
