[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shaerlock"
version = "0.1.0"
description = "An iptables policy detective. Deterministic discovery, LLM-narrated findings, evasion linkage. UMD ENPM693 final project."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Joshua Alwin" }]
license = { text = "MIT" }
dependencies = [
  "pydantic>=2.6",
  "typer>=0.12",
  "rich>=13.7",
  "requests>=2.31",
  "scapy>=2.5",
  "python-dotenv>=1.0",
  "keyring>=25.0",
  "SecretStorage>=3.3 ; sys_platform == 'linux'",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5"]

[project.scripts]
shaerlock = "ai_fw_audit.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["ai_fw_audit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
